2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Disklist.swg: Fix perl warning.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Runs.pl: Fix.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/*.pm: Improve html formating.

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: s/"/'/
	* installcheck/Amanda_Config.pl: Check '.
	* installcheck/Amanda_Rest_Configs.pl: Check '.
	* installcheck/Amanda_Rest_Dles.pl: Check '.
	* installcheck/Amanda_Rest_Runs.pl: Check Amanda::Rest::Runs module.
	* installcheck/Makefile.am (server_tests): Add Amanda_Rest_Runs.
	* perl/Amanda/Amdump.pm: Small Improvement.
	* perl/Amanda/Amflush.pm: Small Improvement.
	* perl/Amanda/Rest/Runs.pm: Add list method.
	* perl/Amanda/Status.pm: Improve documentation.
	* perl/Amanda/Vault.pm: Remove debugging statement.
	* server-src/amflush.pl: log pid-done line.
	* server-src/planner.c: s/--exact_match/--exact-match/

2014-07-08  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Move some declaration to s3-device.h
	* device-src/s3-device.h: New file.
	* device-src/Makefile.am: Add s3-device.h.

2014-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Amcheck.pl: Fix.

2014-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Add Amcheck module.

2014-07-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Message.pm: Add amcheck message.
	* perl/Amanda/Rest/Amcheck.pm: Rest API endpoint to execute amcheck.
	* perl/Makefile.am (AmandaRest_DATA): Add Amanda/Rest/Amcheck.pm.
	* server-src/diskfile.c (match_disklist): return a GPtrArray.
	* server-src/diskfile.h (match_disklist): Change prototype.
	* server-src/driver.c, server-src/dumper.c: Fix argv0.
	* server-src/amadmin.c, server-src/planner.c: Use newest
	  match_disklist function.